docs/website/src/main/resources/certifications/jakarta-authentication/1.1/TCK-Results.md
TCK Results
===========

As required by the
[Eclipse Foundation Technology Compatibility Kit License](https://www.eclipse.org/legal/tck.php),
following is a summary of the TCK results for releases of Jakarta Authentication.

# Eclipse GlassFish 5.1 Certification Summary

- Product Name, Version and download URL (if applicable): <br/>
  [Eclipse GlassFish 5.1](https://www.eclipse.org/downloads/download.php?file=/glassfish/glassfish-5.1.0.zip)
  Includes Authentication API, 1.1.2
- Specification Name, Version and download URL: <br/>
  [Jakarta Authentication 1.1](https://jakarta.ee/specifications/authentication/1.1/)
- TCK Version, digital SHA-256 fingerprint and download URL: <br/>
  [Jakarta Authentication TCK, 1.1.0](http://download.eclipse.org/ee4j/jakartaee-tck/jakartaee8-eftl/promoted/eclipse-authentication-tck-1.1.0.zip), SHA-256: `3bd5919a95ad4e6a9e610a585448f90b8b4475a52cc9ebad429b412b949c0a89`
- Public URL of TCK Results Summary: <br/>
  [TCK results summary](TCK-Results.html)
- Any Additional Specification Certification Requirements: <br/>
  None
- Java runtime used to run the implementation: <br/>
  Oracle JDK 1.8.0_191
- Summary of the information for the certification environment, operating system, cloud, ...: <br/>
  Linux Centos 7


Test results:

```
[javatest.batch] ********************************************************************************
[javatest.batch] Completed running 106 tests.
[javatest.batch] Number of Tests Passed      = 106
[javatest.batch] Number of Tests Failed      = 0
[javatest.batch] Number of Tests with Errors = 0
[javatest.batch] ********************************************************************************
```
