docs/website/src/main/resources/certifications/jakarta-authentication/2.0/TCK-Results.md
TCK Results
===========

As required by the
[Eclipse Foundation Technology Compatibility Kit License](https://www.eclipse.org/legal/tck.php),
following is a summary of the TCK results for releases of Jakarta Authentication.

# Eclipse GlassFish 6.0 Certification Summary

- Product Name, Version and download URL (if applicable): <br/>
  [Eclipse Glassfish 6.0.0-M3-2020-10-04](https://github.com/eclipse-ee4j/glassfish/releases/download/6.0.0-M3-2020-10-04/glassfish-6.0.0-M3-2020-10-04.zip)
- Specification Name, Version and download URL: <br/>
  [Jakarta Authentication 2.0](https://jakarta.ee/specifications/authentication/2.0/)
- TCK Version, digital SHA-256 fingerprint and download URL: <br/>
  [Jakarta Authentication TCK, 2.0.0](https://download.eclipse.org/ee4j/jakartaee-tck/jakartaee9-eftl/staged-900/jakarta-authentication-tck-2.0.0.zip), SHA-256: `4fff0e3984cec6937db1e5b2e1894534f695fe72ad3aeb076a8423fa5845ad07`
- Public URL of TCK Results Summary: <br/>
  [TCK results summary](TCK-Results.html)
- Any Additional Specification Certification Requirements: <br/>
  None
- Java runtime used to run the implementation: <br/>
  Oracle JDK 1.8.0_202
- Summary of the information for the certification environment, operating system, cloud, ...: <br/>
  Alpine Linux v3.12


Test results:

```
[javatest.batch] ********************************************************************************
[javatest.batch] Completed running 107 tests.
[javatest.batch] Number of Tests Passed      = 107
[javatest.batch] Number of Tests Failed      = 0
[javatest.batch] Number of Tests with Errors = 0
[javatest.batch] ********************************************************************************

Total time: 5 minutes 54 seconds
SHA256_GF=f69a582e2ee15f49afb48adb2393d42351256ea070a60513e1ae17afe973e9c3
SHA256_API=396bd2869dd7d5a79ce495bb9412cc4e4d0422ea8e8d7422419d8ef38b891f8a
SHA256_TCK=4fff0e3984cec6937db1e5b2e1894534f695fe72ad3aeb076a8423fa5845ad07
Product_download=https://download.eclipse.org/ee4j/glassfish/weekly/glassfish-6.0.0-SNAPSHOT-2020-10-04.zip (= https://github.com/eclipse-ee4j/glassfish/releases/download/6.0.0-M3-2020-10-04/glassfish-6.0.0-M3-2020-10-04.zip)
API_download=https://jakarta.oss.sonatype.org/content/repositories/staging/jakarta/authentication/jakarta.authentication-api/2.0.0/jakarta.authentication-api-2.0.0.jar
TCK_download=https://download.eclipse.org/ee4j/jakartaee-tck/jakartaee9-eftl/staged-900/jakarta-authentication-tck-2.0.0.zip
OS4=3.12.0 NAME="Alpine Linux" ID=alpine VERSION_ID=3.12.0 PRETTY_NAME="Alpine Linux v3.12" HOME_URL="https://alpinelinux.org/" BUG_REPORT_URL="https://bugs.alpinelinux.org/"
JDK_VERSION=java version "1.8.0_202" Java(TM) SE Runtime Environment (build 1.8.0_202-b08) Java HotSpot(TM) 64-Bit Server VM (build 25.202-b08, mixed mode)
```
